--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,8 +43,9 @@ dependencies {
 
     implementation platform('com.google.firebase:firebase-bom:27.1.0')
     implementation 'com.google.firebase:firebase-analytics-ktx'
-    implementation 'com.google.firebase:firebase-database:19.7.0'
+    implementation 'com.google.firebase:firebase-database-ktx'
     implementation 'com.google.firebase:firebase-auth-ktx'
+
     implementation 'com.facebook.android:facebook-login:8.2.0'
 
     testImplementation 'junit:junit:4.+'
