realtime_database error detected. have to find what makes error

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         </activity>
         <activity android:name=".LoginActivity" />
         <activity android:name=".LikeActivity"/>
+        <activity android:name=".MatchListActivity"/>
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
